@@ -1231,22 +1231,6 @@
                     <skipTests>false</skipTests>
                     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <skip>false</skip>
-                            <excludes>
-                                <exclude>none</exclude>
-                            </excludes>
-                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 			<!-- code coverage -->
             <plugin>
